README.md updated für Maven